<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212" android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_book"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vui_l_ng_nh_p_y_th_ng_tin"
        android:textSize="17sp"
        android:layout_marginTop="5sp"
        android:textColor="#888888"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="20sp"
        android:layout_marginTop="5sp"
        android:textStyle="bold"
        android:textColor="#AAAAAA"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#1E1E1E"
        android:layout_marginBottom="16dp"
    >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book"
    />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Author"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#AAAAAA"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#1E1E1E"
        android:layout_marginBottom="16dp"

    >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name_Auth"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nxb"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#AAAAAA"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#1E1E1E"
        android:layout_marginBottom="16dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNXB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nxb"
        />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
</ScrollView>