<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titleCreateBook"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_nameBook"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvBookTitle" />

    <EditText
        android:id="@+id/etBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_nameAuthor"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etBookName" />

    <EditText
        android:id="@+id/etBookQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_quantity"
        android:inputType="number"
        android:text="@string/txt_hardQuantity"
        app:layout_constraintTop_toBottomOf="@+id/etBookAuthor" />

    <EditText
        android:id="@+id/etBookCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_bookCode"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etBookQuantity" />

    <Button
        android:id="@+id/btnFinishSetup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/txt_buttonCompletedAddBook"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>