<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#80D8FF"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- BÊN TRÁI -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_title"
                android:textColor="#8C9EFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_ticket"
                    android:textColor="#6A7385"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dot"
                    android:textColor="#6A7385"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/late_ticket"
                    android:textColor="#6A7385"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- BÊN PHẢI -->
        <Button
            android:id="@+id/btnAddTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ticket"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:backgroundTint="#2196F3"/>
    </LinearLayout>

    <!-- Search + Spinner -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <AutoCompleteTextView
            android:id="@+id/autoSearch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:hint="@string/search_hint"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:background="@drawable/bg_search"
            android:padding="10dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"/>

</LinearLayout>